# searching_engine

./: CMakeLists.txt  README.md  build.sh  main.cpp  qml.qrc
include/: ConverterJSON.h
json/: answers.json  config.json  requests.json
qml/: main.qml
src/: ConverterJSON.cpp
test/: test_main.cpp
